...
                    app:layout_constraintBottom_toBottomOf="@+id/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/name"
                    />

                <ImageView
                    android:id="@+id/searchicon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="84dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/searchplant"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_search_black_24dp" />


...
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_home_black_24dp"
                        app:tint="#000000"/>

                    <TextView
...
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_widgets_black_24dp"
                        app:tint="#006400"/>

                    <TextView
...


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:id="@+id/camera"
            app:layout_anchor="@id/app_bar"
            android:backgroundTint="#006400"
            android:src="@drawable/ic_camera_black_24dp"
            app:backgroundTint="#006400"
            app:maxImageSize="30dp"
            app:tint="#FFFFFF"
...
